{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 386,
  "lineage": "33df939b-edb0-9132-d53a-d2fc1f05ec44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01d36e140371345fa",
            "domain": "vpc",
            "id": "eipalloc-0c824f214be3feb43",
            "network_interface": "eni-016b17600e02a7787",
            "private_dns": "ip-10-0-0-102.eu-central-1.compute.internal",
            "private_ip": "10.0.0.102",
            "public_dns": "ec2-18-159-181-111.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.181.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0497ae1742a285aec",
            "domain": "vpc",
            "id": "eipalloc-052923a60b6f6d669",
            "network_interface": "eni-0193072daf1e914f9",
            "private_dns": "ip-10-0-2-252.eu-central-1.compute.internal",
            "private_ip": "10.0.2.252",
            "public_dns": "ec2-18-157-188-79.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.188.79",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:internet-gateway/igw-07dcbd59be860aa70",
            "id": "igw-07dcbd59be860aa70",
            "owner_id": "853965937421",
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "backendlb.logs",
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:loadbalancer/app/backend-lb/2206496e8a48a454",
            "arn_suffix": "app/backend-lb/2206496e8a48a454",
            "dns_name": "internal-backend-lb-1094980501.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:loadbalancer/app/backend-lb/2206496e8a48a454",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-lb",
            "security_groups": [
              "sg-021537df462687f84"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f9b7ccc820cc081"
              },
              {
                "subnet_id": "subnet-03238ec221fa5f20c"
              }
            ],
            "subnets": [
              "subnet-02f9b7ccc820cc081",
              "subnet-03238ec221fa5f20c"
            ],
            "vpc_id": "vpc-094f6599e6507a9a6",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.allow_http_instances",
            "aws_security_group.allow_https_backend_lb",
            "aws_vpc.default",
            "data.aws_subnet_ids.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:loadbalancer/app/frontend-lb/d0f3d6bee60efe11",
            "arn_suffix": "app/frontend-lb/d0f3d6bee60efe11",
            "dns_name": "frontend-lb-1427300463.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:loadbalancer/app/frontend-lb/d0f3d6bee60efe11",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-lb",
            "security_groups": [
              "sg-0bbd6bb4e5eec8e74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09fd8d08bb864a299"
              },
              {
                "subnet_id": "subnet-0d4ee8c511c33cfc3"
              }
            ],
            "subnets": [
              "subnet-09fd8d08bb864a299",
              "subnet-0d4ee8c511c33cfc3"
            ],
            "vpc_id": "vpc-094f6599e6507a9a6",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.allow_https_lb",
            "aws_vpc.default",
            "data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:listener/app/backend-lb/2206496e8a48a454/654726c87c837d02",
            "certificate_arn": "arn:aws:acm:eu-central-1:853965937421:certificate/afaadd29-ef95-478c-ba26-76e4bcfb29df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:targetgroup/backend-target-group/e8a723edd7165dda",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:listener/app/backend-lb/2206496e8a48a454/654726c87c837d02",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:loadbalancer/app/backend-lb/2206496e8a48a454",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.backend_lb",
            "aws_lb_target_group.backend",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:listener/app/frontend-lb/d0f3d6bee60efe11/2eab85a481fe6582",
            "certificate_arn": "arn:aws:acm:eu-central-1:853965937421:certificate/afaadd29-ef95-478c-ba26-76e4bcfb29df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:targetgroup/frontend-target-group/305ff658e9936c57",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:listener/app/frontend-lb/d0f3d6bee60efe11/2eab85a481fe6582",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:loadbalancer/app/frontend-lb/d0f3d6bee60efe11",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.frontend_lb",
            "aws_lb_target_group.frontend",
            "aws_security_group.allow_https_lb",
            "aws_vpc.default",
            "data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:targetgroup/backend-target-group/e8a723edd7165dda",
            "arn_suffix": "targetgroup/backend-target-group/e8a723edd7165dda",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:targetgroup/backend-target-group/e8a723edd7165dda",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "backend-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:targetgroup/frontend-target-group/305ff658e9936c57",
            "arn_suffix": "targetgroup/frontend-target-group/305ff658e9936c57",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:853965937421:targetgroup/frontend-target-group/305ff658e9936c57",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "frontend-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c824f214be3feb43",
            "id": "nat-047e7663ee26108d4",
            "network_interface_id": "eni-016b17600e02a7787",
            "private_ip": "10.0.0.102",
            "public_ip": "18.159.181.111",
            "subnet_id": "subnet-0d4ee8c511c33cfc3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052923a60b6f6d669",
            "id": "nat-0c8269224f87e31ea",
            "network_interface_id": "eni-0193072daf1e914f9",
            "private_ip": "10.0.2.252",
            "public_ip": "18.157.188.79",
            "subnet_id": "subnet-09fd8d08bb864a299"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e1bf3251eaf25a461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-047e7663ee26108d4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1bf3251eaf25a46",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032b4444df143a0651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c8269224f87e31ea",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032b4444df143a065",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07dcbd59be860aa70",
            "id": "r-rtb-0467c9b9723dbc6fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0467c9b9723dbc6fd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e1bf3251eaf25a46",
            "owner_id": "853965937421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047e7663ee26108d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-032b4444df143a065",
            "owner_id": "853965937421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8269224f87e31ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0467c9b9723dbc6fd",
            "owner_id": "853965937421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dcbd59be860aa70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0229e88f8a87622d4",
            "route_table_id": "rtb-0467c9b9723dbc6fd",
            "subnet_id": "subnet-02f9b7ccc820cc081"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b40174f800fc29ee",
            "route_table_id": "rtb-0467c9b9723dbc6fd",
            "subnet_id": "subnet-03238ec221fa5f20c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7560758c01c5607",
            "route_table_id": "rtb-0467c9b9723dbc6fd",
            "subnet_id": "subnet-0d4ee8c511c33cfc3"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cfdbb77f7c42bb9",
            "route_table_id": "rtb-0467c9b9723dbc6fd",
            "subnet_id": "subnet-09fd8d08bb864a299"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:security-group/sg-0d6d58487cf9b8cf9",
            "description": "Allow HTTP from Frontend LB to frontend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6d58487cf9b8cf9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bbd6bb4e5eec8e74"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_instances_frontend",
            "name_prefix": "",
            "owner_id": "853965937421",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_security_group.allow_https_lb",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_instances_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:security-group/sg-08138566b065fd917",
            "description": "http from backend LB to backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08138566b065fd917",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Http from Backend LB to backend instances",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-021537df462687f84"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_instances_backend",
            "name_prefix": "",
            "owner_id": "853965937421",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_security_group.allow_http_instances",
            "aws_security_group.allow_https_backend_lb",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https_backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:security-group/sg-021537df462687f84",
            "description": "Allow http from Frontend instances to backend LB",
            "egress": [],
            "id": "sg-021537df462687f84",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from Frontend Nodes",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6d58487cf9b8cf9"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https_backend_lb",
            "name_prefix": "",
            "owner_id": "853965937421",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_security_group.allow_http_instances",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:security-group/sg-0bbd6bb4e5eec8e74",
            "description": "Allow https on frontend LB ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbd6bb4e5eec8e74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs from everywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https_lb",
            "name_prefix": "",
            "owner_id": "853965937421",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:subnet/subnet-02f9b7ccc820cc081",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02f9b7ccc820cc081",
            "map_public_ip_on_launch": false,
            "owner_id": "853965937421",
            "tags": {
              "Tier": "Private"
            },
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:subnet/subnet-03238ec221fa5f20c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03238ec221fa5f20c",
            "map_public_ip_on_launch": false,
            "owner_id": "853965937421",
            "tags": {
              "Tier": "Private"
            },
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:subnet/subnet-0d4ee8c511c33cfc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0d4ee8c511c33cfc3",
            "map_public_ip_on_launch": true,
            "owner_id": "853965937421",
            "tags": {
              "Tier": "Public"
            },
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:subnet/subnet-09fd8d08bb864a299",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09fd8d08bb864a299",
            "map_public_ip_on_launch": true,
            "owner_id": "853965937421",
            "tags": {
              "Tier": "Public"
            },
            "vpc_id": "vpc-094f6599e6507a9a6"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:853965937421:vpc/vpc-094f6599e6507a9a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-091dfc2b034ebb653",
            "default_route_table_id": "rtb-0a13b9e75173f2f32",
            "default_security_group_id": "sg-05348e4a896b7ca23",
            "dhcp_options_id": "dopt-61a78a0a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-094f6599e6507a9a6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a13b9e75173f2f32",
            "owner_id": "853965937421",
            "tags": {
              "Name": "snekisnek"
            }
          }
        }
      ]
    }
  ]
}